[gd_scene load_steps=4 format=2]

[ext_resource path="res://common/game/mode/GameMode.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/game/mode/fugitive/FugitiveGame.gd" type="Script" id=2]
[ext_resource path="res://common/game/mode/fugitive/FugitiveStateMachine.gd" type="Script" id=3]

[node name="Game" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="." index="0"]
script = ExtResource( 3 )
listenerPath = NodePath("..")

[node name="ReturnToLobbyTimer" type="Timer" parent="." index="1"]
wait_time = 5.0
one_shot = true
[connection signal="timeout" from="ReturnToLobbyTimer" to="." method="_on_ReturnToLobbyTimer_timeout"]
